--- a/src/app/viz/viz.component.html
+++ b/src/app/viz/viz.component.html
@@ -1,5 +1,8 @@
 <div>
   viz works!
-  <div id="map">
+  <div id="map" style="width:1500px;">
   </div>
 </div>
+<app-pie-chart></app-pie-chart>
+<app-line-chart></app-line-chart>
+<app-doughnut-chart></app-doughnut-chart>
