--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -1,45 +1,96 @@
-<nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
-    <li class="nav-item active"><a class="navbar-brand" href="#">Icon</a></li>
-   <li class="nav-item">
-    <form>
-    
-    <input type="text" class="form-control  mr-sm-2" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Month of travel">
-    </form> 
-  </li>
- 
- <li>
-   <form>
-    
-    <input type="text" class="form-control  mr-sm-2" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Travel Period">
-    </form>
-  </li>
- <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Date
-        </a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="#">Action</a>
-          <a class="dropdown-item" href="#">Another action</a>
-          <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="#">Something else here</a>
-        </div>
-      </li>
- 
- 
-    </ul>
-    <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-    </form>
-  </div>
-</nav>
-<div class="row map"></div>
-<div class="row">
-  <div class="col-4 left"></div>
-  <div class="col-8 right"></div>
-</div>
-<div class="row bottom">
-</div>
+<div class="wrapper d-flex w-100 h-100" id="wrapper">
+  <nav id="sidebar">
+    <div class="sidebar-sticky text-center">
+      <div class="sidebar-header">
+        <a class="navbar-brand" href="#"><img src="assets/logo.png" class="logo" alt="logo"></a>
+      </div>
+      <!-- <div class="quick-create text-left" title="Add course">
+        <button type="button" class="btn btn-primary" routerLink="/course/add"><i class="fas fa-plus"></i><span>&nbsp;&nbsp;Add Course</span></button>
+      </div> -->
 
+      <ul class="nav flex-column text-left">
+        <li class="nav-item active"><a class="nav-link" routerLink="/viz"><i class="fas fa-tv"></i><span>&nbsp;&nbsp;&nbsp;Home</span></a></li>
+        <li class="nav-item"><a class="nav-link" routerLink="/viz"><i class="fas fa-chart-line"></i><span>&nbsp;&nbsp;&nbsp;Prediction</span></a></li>
+        <li class="nav-item"><a routerLink="/viz" class="nav-link"><i class="fas fa-question-circle"></i><span>&nbsp;&nbsp;&nbsp;Help</span></a></li>
+      </ul>
+
+      <div class="collapse-in-out" (click)="collapse()" title="collapse">
+        <i class="fas fa-angle-double-left" style="color:#343957"></i>
+      </div>
+    </div>
+  </nav>
+
+  <div id="content">
+    <div class="top-nav">
+      <nav class="navbar navbar-light pb-0 pr-2 justify-content-center">
+        <div class="form-group bg-transparent">
+          <label>Month</label>
+          <select class="form-control">
+            <option>January </option>
+            <option>February </option>
+            <option>March</option>
+            <option>April</option>
+          </select>
+        </div>
+        <div class="form-group bg-transparent">
+          <label>Query</label>
+          <select class="form-control">
+            <option>Top routes</option>
+            <option>Expensive routes</option>
+            <option>3</option>
+            <option>4</option>
+          </select>
+        </div>
+        <div class="form-group  bg-transparent">
+          <label>City</label>
+          <select class="form-control">
+            <option>Vancouver</option>
+            <option>Halifax</option>
+            <option>3</option>
+            <option>4</option>
+          </select>
+        </div>
+        <button type="button" class="btn btn-primary run-report">Go</button>
+      </nav>
+
+    </div>
+
+    <div class="course-wrapper px-4">
+      <div class="content-title row justify-content-around">
+        <div class="col-sm-11 col-xs-12 p-0">
+          <h6>
+            <span class="float-left">Dashboard &nbsp;&nbsp;</span>
+            <span class="float-right cursor-pointer" data-toggle="tooltip" data-placement="bottom" title="Export as CSV">
+              <i class="fas fa-print" style="color:#343957;font-size:18px;"></i>
+            </span>
+          </h6>
+        </div>
+        <div class="col-sm-5 col-xs-0 p-0">
+        </div>
+      </div>
+      <div class="row justify-content-around mt-4">
+        <div class="card flex-md-row col-sm-11 col-xs-12 p-0 map-view">
+          <div class="card-body align-items-center d-flex justify-content-center">
+            <app-viz></app-viz>
+          </div>
+        </div>
+        <div class="card flex-md-row col-sm-5 col-xs-12 p-0">
+          <div class="card-body align-items-center d-flex justify-content-center">
+            <app-pie-chart></app-pie-chart>
+          </div>
+        </div>
+        <div class="card flex-md-row col-sm-5 col-xs-12 p-0">
+          <div class="card-body align-items-center d-flex justify-content-center">
+            <app-line-chart></app-line-chart>
+          </div>
+        </div>
+        <div class="card flex-md-row col-sm-5 col-xs-12 p-0">
+          <div class="card-body align-items-center d-flex justify-content-center">
+            <app-doughnut-chart></app-doughnut-chart>
+          </div>
+        </div>
+
+      </div>
+    </div>
+  </div>
+</div>
