--- a/src/app/viz/viz.component.html
+++ b/src/app/viz/viz.component.html
@@ -1,8 +1,4 @@
 <div>
-  viz works!
-  <div id="map" style="width:1500px;">
+  <div id="map" style="width:900px">
   </div>
 </div>
-<app-pie-chart></app-pie-chart>
-<app-line-chart></app-line-chart>
-<app-doughnut-chart></app-doughnut-chart>
