--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -61,7 +61,7 @@
           <h6>
             <span class="float-left">Dashboard &nbsp;&nbsp;</span>
             <span class="float-right cursor-pointer" data-toggle="tooltip" data-placement="bottom" title="Export as CSV">
-              <i class="fas fa-print" style="color:#343957;font-size:18px;"></i>
+              <i class="fas fa-file-download" style="font-size:22px;"></i>
             </span>
           </h6>
         </div>
