--- a/src/app/viz/viz.component.html
+++ b/src/app/viz/viz.component.html
@@ -13,5 +13,33 @@
         <app-doughnut-chart></app-doughnut-chart>
       </ng-template>
 </div> -->
-<div id="myMap" style="width:900px;">
+<div class="row justify-content-around mt-4">
+  <div class="card flex-md-row col-sm-11 col-xs-12 p-0 map-view">
+    <div class="card-body align-items-center d-flex justify-content-center">
+      <div id="myMap" style="width:1200px;">
+      </div>
+    </div>
+  </div>
+
+  <div *ngIf="isLocationSelected; else elseBlock" >
+    <div class="card flex-md-row col-sm-5 col-xs-12 p-0">
+      <div class="card-body align-items-center d-flex justify-content-center">
+        <app-pie-chart [pieResponse]="apiPieResponse"></app-pie-chart>
+      </div>
+    </div>
+    <div class="card flex-md-row col-sm-5 col-xs-12 p-0">
+      <div class="card-body align-items-center d-flex justify-content-center">
+        <app-line-chart></app-line-chart>
+      </div>
+    </div>
+    <div class="card flex-md-row col-sm-5 col-xs-12 p-0">
+      <div class="card-body align-items-center d-flex justify-content-center">
+        <app-doughnut-chart></app-doughnut-chart>
+      </div>
+    </div>
+  </div>
+  <ng-template #elseBlock>
+
+  </ng-template>
+
 </div>
