--- a/src/app/viz/viz.component.html
+++ b/src/app/viz/viz.component.html
@@ -14,32 +14,33 @@
       </ng-template>
 </div> -->
 <div class="row justify-content-around mt-4">
-  <div class="card flex-md-row col-sm-11 col-xs-12 p-0 map-view">
-    <div class="card-body align-items-center d-flex justify-content-center">
-      <div id="myMap" style="width:1200px;">
+  <div class="card flex-md-row col-sm-7 col-xs-12 p-0 map-view">
+    <div class="card-body d-flex justify-content-center">
+      <div id="myMap" style="width:100%;">
       </div>
     </div>
   </div>
+  <div class="card flex-md-row col-sm-4 col-xs-12 p-0 details">
+    <div class="card-body align-items-center justify-content-center">
+      <h4>Value range&nbsp;&nbsp;<i class="fas fa-question-circle"></i></h4>
+      <div class="range-high text-right text-danger">$2030&nbsp;&nbsp;<i class="fas fa-arrow-up" style="font-size:10px"></i></div>
+      <div class="range-low text-right text-success">$103&nbsp;&nbsp;<i class="fas fa-arrow-down" style="font-size:10px"></i></div>
 
-  <div *ngIf="isLocationSelected; else elseBlock" >
-    <div class="card flex-md-row col-sm-5 col-xs-12 p-0">
-      <div class="card-body align-items-center d-flex justify-content-center">
-        <app-pie-chart [pieResponse]="apiPieResponse"></app-pie-chart>
-      </div>
-    </div>
-    <div class="card flex-md-row col-sm-5 col-xs-12 p-0">
-      <div class="card-body align-items-center d-flex justify-content-center">
-        <app-line-chart></app-line-chart>
-      </div>
-    </div>
-    <div class="card flex-md-row col-sm-5 col-xs-12 p-0">
-      <div class="card-body align-items-center d-flex justify-content-center">
-        <app-doughnut-chart></app-doughnut-chart>
-      </div>
+      <app-doughnut-chart></app-doughnut-chart>
     </div>
   </div>
-  <ng-template #elseBlock>
 
-  </ng-template>
+  <div *ngIf="isLocationSelected"  id="content" class="card col-sm-6 col-xs-12 p-0">
+    <h4 class="title">Class Overview&nbsp;&nbsp;<i class="fas fa-question-circle"></i></h4>
+    <div class="card-body d-flex justify-content-center">
+      <app-pie-chart [pieResponse]="apiPieResponse"></app-pie-chart>
+    </div>
+  </div>
+  <div *ngIf="isLocationSelected" class="card col-sm-5 col-xs-12 p-0">
+    <h4 class="title">Monthly trend&nbsp;&nbsp;<i class="fas fa-question-circle"></i></h4>
+    <div class="card-body d-flex justify-content-center">
+      <app-line-chart></app-line-chart>
+    </div>
+  </div>
 
 </div>
