--- a/src/app/viz/viz.component.scss
+++ b/src/app/viz/viz.component.scss
@@ -1,4 +1,40 @@
-div{
-    height: 1000px;
-    width: 100%;
+.card {
+  min-width: 300px;
+  border-color: #eef0f5;
+  margin-bottom: 55px;
+  transition: all 0.3s ease-in;
+
+  &.map-view {
+    background-color: transparent;
+    border: none;
+    .card-body {
+      background-color: transparent;
+      padding: 0;
+    }
+  }
+
+  &:hover {
+    border-color: none;
+    box-shadow: 0 5px 11px 0 rgba(0, 0, 0, 0.18), 0 4px 15px 0 rgba(0, 0, 0, 0.15);
+  }
+}
+
+h4 {
+  font-size: 16px;  
+}
+
+.title {
+  font-size: 16px;
+  padding-top: 20px;
+  padding-left: 20px;
+}
+
+
+.card-body {
+  background-color: #fff;
+
+  .code {
+    color: #343957;
+    opacity: 0.9;
+  }
 }
