--- a/src/app/pie-chart/pie-chart.component.html
+++ b/src/app/pie-chart/pie-chart.component.html
@@ -1,3 +1,3 @@
 <div>
-  <canvas id="piechartContainer" style="height: 370px; width: 300px;"></canvas>
+  <canvas id="piechartContainer" width="300" height="270"></canvas>
 </div>
