--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -24,7 +24,7 @@
     <div class="top-nav">
       <nav class="navbar navbar-light pb-0 pr-2 justify-content-center">
         <div class="form-group bg-transparent">
-          <label>Month</label>
+          <label style="font-weight:500;">Month</label>
           <select class="form-control" id="month">
             <option value="1">Jan</option>
             <option value="2">Feb</option>
@@ -33,37 +33,37 @@
           </select>
         </div>
         <div class="form-group bg-transparent">
-          <label>Query</label>
-          <select class="form-control" id="queryType">
-            <option value="PEOPLE_FROM">Most People From</option>
-            <option value="PEOPLE_TO">Most People To</option>
-            <option value="ROUTE_FROM">Most Expensive From</option>
-            <option value="ROUTE_TO">Most Expensive To</option>
-            <option value="TOTAL_COST_TO">Total Cost to</option>
-            <option value="TOTAL_COST_FROM">Total Cost From</option>
-            <option value="TOTAL_PASSENGER_TO">Total Passenger To</option>
-            <option value="TOTAL_PASSENGER_FROM">Total Passenger From</option>
+          <label style="font-weight:500;">Query</label>
+          <select class="form-control" id="queryType" style="width:340px;">
+            <option value="PEOPLE_FROM">To which cities are most passengers travelling to from</option>
+            <option value="PEOPLE_TO">Which cities have the most passengers travelling to</option>
+            <option value="ROUTE_FROM">Which are the most expensive cities to travel to from</option>
+            <option value="ROUTE_TO">Which are the most expensive cities to travel from </option>
+            <option value="TOTAL_COST_TO">How much was spent on travelling to each city</option>
+            <option value="TOTAL_COST_FROM">How much was spent on travelling from each city</option>
+            <option value="TOTAL_PASSENGER_TO">How many passengers travelled to each city</option>
+            <option value="TOTAL_PASSENGER_FROM">How many passengers travelled from each city</option>
           </select>
         </div>
         <div class="form-group  bg-transparent">
-          <label>City</label>
+          <label style="font-weight:500;">City</label>
           <select class="form-control" id="citySelected">
-              <option value="calgary">calgary</option>
-              <option value="edmonton">edmonton</option>
-              <option value="fredericton">fredericton</option>
-              <option value="halifax">halifax</option>
-              <option value="montreal">montreal</option>
-              <option value="ottawa">ottawa</option>
-              <option value="quebec">quebec</option>
-              <option value="regina">regina</option>
-              <option value="saskatoon">saskatoon</option>
-              <option value="st john's">st john's</option>
-              <option value="thunder bay">thunder bay</option>
-              <option value="toronto">toronto</option>
-              <option value="vancouver">vancouver</option>
-              <option value="victoria">victoria</option>
-              <option value="winnipeg">winnipeg</option>
-              <option value="yellowknife">yellowknife</option>
+              <option value="calgary">Calgary</option>
+              <option value="edmonton">Edmonton</option>
+              <option value="fredericton">Fredericton</option>
+              <option value="halifax">Halifax</option>
+              <option value="montreal">Montreal</option>
+              <option value="ottawa">Ottawa</option>
+              <option value="quebec">Quebec</option>
+              <option value="regina">Regina</option>
+              <option value="saskatoon">Saskatoon</option>
+              <option value="st john's">St John's</option>
+              <option value="thunder bay">Thunder bay</option>
+              <option value="toronto">Toronto</option>
+              <option value="vancouver">Vancouver</option>
+              <option value="victoria">Victoria</option>
+              <option value="winnipeg">Winnipeg</option>
+              <option value="yellowknife">Yellowknife</option>
           </select>
         </div>
         <button type="button" class="btn btn-primary run-report" (click)="submitQuery();">Go</button>
