--- a/src/app/viz/viz.component.html
+++ b/src/app/viz/viz.component.html
@@ -23,10 +23,11 @@
   <div class="card flex-md-row col-sm-4 col-xs-12 p-0 details">
     <div class="card-body align-items-center justify-content-center">
       <h4>Value range&nbsp;&nbsp;<i class="fas fa-question-circle"></i></h4>
-      <div class="range-high text-right text-danger">$2030&nbsp;&nbsp;<i class="fas fa-arrow-up" style="font-size:10px"></i></div>
-      <div class="range-low text-right text-success">$103&nbsp;&nbsp;<i class="fas fa-arrow-down" style="font-size:10px"></i></div>
-
-      <app-doughnut-chart></app-doughnut-chart>
+      <div class="range-high text-right text-danger">{{highestValue}}<i class="fas fa-arrow-up" style="font-size:10px"></i></div>
+      <div class="range-low text-right text-success">{{lowestValue}}<i class="fas fa-arrow-down" style="font-size:10px"></i></div>
+      <div>
+        <canvas id="doughchartContainer" style="height: 270px; width: 300px;"></canvas>
+      </div>
     </div>
   </div>
 
@@ -39,7 +40,7 @@
   <div *ngIf="isLocationSelected" class="card col-sm-5 col-xs-12 p-0">
     <h4 class="title">Monthly trend&nbsp;&nbsp;<i class="fas fa-question-circle"></i></h4>
     <div class="card-body d-flex justify-content-center">
-      <app-line-chart></app-line-chart>
+      <app-line-chart [lineResponse]="apiLineResponse"></app-line-chart>
     </div>
   </div>
 
