--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -9,9 +9,9 @@
       </div> -->
 
       <ul class="nav flex-column text-left">
-        <li class="nav-item active"><a class="nav-link" routerLink="/viz"><i class="fas fa-tv"></i><span>&nbsp;&nbsp;&nbsp;Home</span></a></li>
-        <li class="nav-item"><a class="nav-link" routerLink="/viz"><i class="fas fa-chart-line"></i><span>&nbsp;&nbsp;&nbsp;Prediction</span></a></li>
-        <li class="nav-item"><a routerLink="/viz" class="nav-link"><i class="fas fa-question-circle"></i><span>&nbsp;&nbsp;&nbsp;Help</span></a></li>
+        <li class="nav-item active"><a class="nav-link" routerLink="/"><i class="fas fa-tv"></i><span>&nbsp;&nbsp;&nbsp;Home</span></a></li>
+        <li class="nav-item"><a class="nav-link" routerLink="/prediction"><i class="fas fa-chart-line"></i><span>&nbsp;&nbsp;&nbsp;Prediction</span></a></li>
+        <li class="nav-item"><a routerLink="/" class="nav-link"><i class="fas fa-question-circle"></i><span>&nbsp;&nbsp;&nbsp;Help</span></a></li>
       </ul>
 
       <div class="collapse-in-out" (click)="collapse()" title="collapse">
