--- a/src/app/prediction/prediction.component.html
+++ b/src/app/prediction/prediction.component.html
@@ -78,7 +78,7 @@
           <label>Passenger Count</label>
           <input type="number" class="form-control" placeholder="1">
         </div>
-        <button type="button" class="btn btn-primary run-report" (click)="submitQuery();">Go</button>
+        <button type="button" class="btn btn-primary run-report">Go</button>
       </nav>
 
     </div>
