--- a/src/app/common/layout.scss
+++ b/src/app/common/layout.scss
@@ -5,7 +5,6 @@ $sidebar-sm-width: 70px;
   width: 120px;
 }
 
-
 #sidebar {
   width: $sidebar-width;
   position: fixed;
@@ -177,25 +176,25 @@ $sidebar-sm-width: 70px;
 }
 
 .top-nav .form-group {
-      margin-bottom: 22px;
-      padding: 0 12px;
+  margin-bottom: 22px;
+  padding: 0 12px;
 
-      label {
-        padding-left: 5px;
+  label {
+    padding-left: 5px;
     font-size: 12px;
-      }
+  }
 
   .form-control {
-      padding: 10px 12px;
-      outline: none;
-      width: 200px;
-      border-color: #e8e8e8;
-      background-color: #fff!important;
-      border-bottom-color: #8495C2;
-      font-size: 12px;
-      border-radius: 0;
-      -webkit-transition: all 0.4s ease-in;
-      transition: all 0.4s ease-in;
+    padding: 10px 12px;
+    outline: none;
+    width: 200px;
+    border-color: #e8e8e8;
+    background-color: #fff!important;
+    border-bottom-color: #8495C2;
+    font-size: 12px;
+    border-radius: 0;
+    -webkit-transition: all 0.4s ease-in;
+    transition: all 0.4s ease-in;
 
     &:focus {
       box-shadow: none;
@@ -364,14 +363,14 @@ $sidebar-sm-width: 70px;
   border-color: #2e8fda;
 }
 
-select, option {
+option,
+select {
   text-transform: capitalize;
 }
 
 .cursor-pointer {
   pointer-events: cursor;
 }
-
 @media (max-width: 600px) {
   .search-box {
     width: 120px;
