--- a/src/app/prediction/prediction.component.scss
+++ b/src/app/prediction/prediction.component.scss
@@ -15,7 +15,6 @@
   }
 }
 
-
 .card {
   min-width: 300px;
   border-color: #eef0f5;
@@ -25,6 +24,7 @@
   &.map-view {
     background-color: transparent;
     border: none;
+
     .card-body {
       background-color: transparent;
       padding: 0;
@@ -47,7 +47,6 @@ h4 {
   padding-left: 20px;
 }
 
-
 .card-body {
   background-color: #fff;
 
@@ -63,16 +62,16 @@ h3 {
 }
 
 .amount {
-    font-size: 33px;
-    margin: 45px 0 0px;
-    font-weight: bold;
-    text-align: center;
+  font-size: 33px;
+  margin: 45px 0 0;
+  font-weight: bold;
+  text-align: center;
 }
 
 .help-txt {
   color: #d35400 !important;
-      font-size: 14px;
-    text-align: center;
+  font-size: 14px;
+  text-align: center;
   margin-bottom: 10px;
 }
 
@@ -85,7 +84,9 @@ h3 {
 }
 
 .table {
+  width: 95%;
   font-size: 14px;
+  margin-left: 5%;
 }
 
 .progress-bar {
@@ -93,10 +94,12 @@ h3 {
     width: 100%;
     background-color: #dc3545!important;
   }
+
   &.low {
     width: 25%;
     background-color: #28a745!important;
   }
+
   &.medium {
     width: 75%;
     background-color: #ffc107!important;
