--- a/src/app/prediction/prediction.component.html
+++ b/src/app/prediction/prediction.component.html
@@ -86,7 +86,7 @@
           <label>Passenger Count</label>
           <input type="number" class="form-control" id="peopleCount" placeholder="1" value="1">
         </div>
-        <button type="button" class="btn btn-primary run-report">Go</button>
+        <button type="button" class="btn btn-primary run-report" (click)="submitQuery();">Go</button>
       </nav>
 
     </div>
